# arbor-test

./: .gitignore  Dockerfile  README.md  banking_test.py  entrypoint.sh  main.py  pyproject.toml  setup.sh
scripts/: entrypoint.sh  setup_repos.sh
tests/: test_banking_classification.py  test_imports.py
